Added the mokamint-application start command